# CCDD

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
ccdd/: __init__.py  checkpoints.py  data.py  diffusion_process.py  likelihood.py  loss.py  modeling.py  optimizer.py  pipeline.py  sampling.py  train.py  trainer.py  utils.py
ccdd/eval/: __init__.py  compare_samples.py  decode.py  generate_samples.py  generative_ppl.py  loss.py  self_correction.py
ccdd/models/: __init__.py  ccdd_moe2s.py  configuration_dit.py  dit.py  modeling_dit.py
configs/: ar.yaml  ccdd-small-mdit-qwen3-pr_1.yaml  ccdd-small-mmdit-qwen3-vp-pr_1.yaml  ccdd-small-moedit-qwen3_contextual-linear_flow-pr_1.yaml  eval.yaml  gen_ppl.yaml  generate.yaml  gidd.yaml  lm1b-ccdd-small-mdit-qwen3-vp-pr_1.yaml  lm1b-ccdd-small-mmdit-qwen3-vp-pr_0.9.yaml  lm1b-ccdd-small-moedit-qwen3-vp-pr_1.yaml  mdlm.yaml  self_correction.yaml
configs/data/: defaults.yaml  fineweb.yaml  lm1b.yaml  owt.yaml
configs/logging/: default.yaml
configs/model/: 1B.yaml  base.yaml  small.yaml  tiny.yaml
configs/optimizer/: adam.yaml  psgd.yaml
